# PicoW-Wifi-Thermometer

./: .gitignore  CMakeLists.txt  README.md
fs/: fsdata.c  generate_fsdata.py  index.html
src/: dht11.cpp  dht11.h  http_server.cpp  http_server.h  lwipopts.h  main.cpp  u8g2_pico.c
